--- a/index'.html
+++ b/index'.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kreativ og Humoristisk DIV</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+<div class="wrapper">
+    <h1 class="blinkendeOverskrift">Velkommen til Mr. Whiskers' Te-Selskab!</h1>
+    <div class="humorDiv">
+        <img src="img/44qr4zj20oxa1.jpg" alt="Katten med hatten">
+        <p>"Jeg insisterer på, at du deltager i mit te-selskab," siger Mr. Whiskers.</p>
+    </div>
+</div>
 
 </body>
 </html>
